--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "homepage": "https://github.com/anees028/nodejs-practice#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "config": "^3.3.8",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "mongodb": "^4.10.0",
+    "mongoose": "^6.7.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
     "pug": "^3.0.2",
